# ml-translation-en-fr

./: .gitignore  README.md  app.py  data_collector.py  inference.py  model.py  process_raw_data.py  pyproject copy.toml  pyproject.toml  requirements.txt  tokenize_dataset.py  tokenizer.py  train.py  utils.py
trained_tokenizers/: vocab_en.json  vocab_fr.json
