[project]
name = "translator-en-fr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "accelerate>=1.4.0",
    "datasets>=3.3.2",
    "gradio>=5.21.0",
    "huggingface-hub>=0.29.1",
    "matplotlib>=3.10.1",
    "sentencepiece>=0.2.0",
    "streamlit>=1.43.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
    "wandb>=0.19.8",
]

